# PDF-Scraper

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  QA_REVIEW_AND_PACKAGE.md  README.md  package.json  pyproject.toml  railway.toml  vercel.json
api/: extract.js
api/extract/: async.js
app/: __init__.py  api.py  cli.py  config.py  consolidated.py  diagram_pipeline.py  diagram_vlm.py  extract.py  figure_extract.py  job_store.py  ocr.py  ocr_router.py  pdf_text.py  question_bank.py  question_enricher.py  question_parser.py  schema.py  tika_extract.py  utils.py  version.py  worker.py
app/db/: __init__.py  (+3 more)
docs/: DEPLOY_SIMPLE.md  DEPLOY_STEPS.md  DEPLOY_TROUBLESHOOTING.md  DESIGN_PRODUCTION_OCR.md  DIAGRAM_SETUP.md  DISCOVERY_KARNATAKA_KANNADA.md  IMPROVEMENTS.md  PERFORMANCE.md  PLAN_KANNADA_REGIONAL_REBUILD.md  PLAN_LAYOUT_SPECIFIC_HANDLING.md  PRODUCTION.md  QA.md  VERCEL.md
public/: index.html
scripts/: eval_ground_truth.py  fuzzy_match_pdf.py  kannada_sample_extract.py  quality_batch.py  run_training_set.py
static/: index.html
tests/: qa_pipeline.py  test_api.py  test_config.py  test_consolidated.py  test_diagram_pipeline.py  test_extract.py  test_figure_extract.py  test_image_extract.py  test_job_store.py  test_math_ocr.py  test_ocr.py  test_ocr_paddle.py  test_ocr_router.py  test_ocr_sarvam.py  test_pdf_text_layout.py  test_quality_gate.py  test_question_bank.py  test_question_parser.py  test_reconstruct.py  test_schema.py  test_table_extract.py  test_utils.py  test_worker.py
training/: README.md  train_tesseract.sh
(+8 files in other folders)
